fix z-index of alert

--- a/src/components/Alert/Alert.css
+++ b/src/components/Alert/Alert.css
@@ -8,6 +8,7 @@
     right: 10px;
     gap: 5px;
     transition: all 0.5s ease-in-out;
+    z-index: 9999;
 }
 
 .alert {
